package fr.foundation.modwizard.view;

public abstract class View {
    public abstract void display();
}
