@startuml

title __VIEW's Class Diagram__\n

  namespace fr.foundation.modwizard {
    namespace view {
      class fr.foundation.modwizard.view.BuildingForm {
          + BuildingModelLabel : JLabel
          + buildingModel : JTextField
          + buildingPartSetListLabel : JLabel
          + buildingType : JLabel
          + buildingTypeComboBox : JComboBox
          + buildingTypeLabel : JLabel
          + buildingform : JPanel
          + codePane : JTextPane
          + comboBox1 : JComboBox
          + descLabel : JLabel
          + description : JTextField
          + desirabilityComboBox : JComboBox
          + desirabilityLabel : JLabel
          + isClearTreesBox : JCheckBox
          + isDestructibleBox : JCheckBox
          + isEditableBox : JCheckBox
          + isHiddenBox : JCheckBox
          + isManuallyUnlockedBox : JCheckBox
          + name : JTextField
          + nameLabel : JLabel
          + nextButton : JButton
          + orderId : JTextField
          + orderIdLabel : JLabel
          + villagerRequiredLabel : JLabel
          {static} ~ subFormTextField : JTextField
          - buildingpartListPanel : JPanel
          - fieldPanel : JPanel
          - villagerRequiredPanel : JPanel
          + BuildingForm()
          + display()
          + getBuildingModel()
          + getBuildingTypeComboBox()
          + getBuildingform()
          + getCodePane()
          + getDescription()
          + getDesirabilityComboBox()
          + getIsClearTreesBox()
          + getIsDestructibleBox()
          + getIsEditableBox()
          + getIsHiddenBox()
          + getIsManuallyUnlockedBox()
          + getName()
          + getNextButton()
          + getOrderId()
          + getSubPanelVillagerRequired()
          + getSubpanelBuildingpart()
          + setBuildingModel()
          - createUIComponents()
          - generateBuildingCode()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      class fr.foundation.modwizard.view.ProjectForm {
          - FbxLabel : JLabel
          - FbxNameField : JTextField
          - ProjectField : JTextField
          - next : JButton
          - projectForm : JPanel
          - projectNameLabel : JLabel
          - summary : JEditorPane
          - welcome : JTextPane
          + ProjectForm()
          + display()
          + getFbxLabel()
          + getFbxNameField()
          + getNext()
          + getProjectField()
          + getProjectForm()
          + getProjectNameLabel()
          + setNext()
          - initSummaryPanel()
          - initWelcomePanel()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      abstract class fr.foundation.modwizard.view.View {
          {abstract} + display()
      }
    }
  }
  

  fr.foundation.modwizard.view.BuildingForm -up-|> fr.foundation.modwizard.view.View
  fr.foundation.modwizard.view.BuildingForm o-- fr.foundation.modwizard.view.custom.SubPanelVillagerRequired : subPanelVillagerRequired
  fr.foundation.modwizard.view.BuildingForm o-- fr.foundation.modwizard.view.custom.SubPanelBuildingPart : subpanelBuildingpart
  fr.foundation.modwizard.view.ProjectForm -up-|> fr.foundation.modwizard.view.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
